--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import 'tailwindcss';
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Joan&family=STIX+Two+Text:ital,wght@0,400..700;1,400..700&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Joan&family=STIX+Two+Text:ital,wght@0,400..700;1,400..700&display=swap');.font-inter {
+.font-inter {
   font-family: 'Inter', sans-serif;
 }
 .stix-two-text {
